# WhisperNet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  go.mod  main.go  whispernet
cmd/whispernet/: main.go
include/: connection.h  dht-node.h  did.h  keygen.h  node.h  routing-table.h  routing_table.h  utils.h
internal/cli/: cli.go
internal/core/: config.go  key.go
internal/p2p/: client.go  server.go
node/: node.go  node_test.go
proto/: whispernet.proto
src/: main.cpp  node.cpp  routing_table.cpp
src/DHT/: k-bucket.cpp  node.cpp  routing-table.cpp
src/auth/: did.cpp  keygen.cpp
src/dht/: Node.cpp  Node.h
src/p2p/: connection.cpp
src/utils/: utils.cpp
